adiciona rotas de edição de perfil dos usuarios, adiciona form-data com foto_avatar e adiciona arquivo de configuração para o upload de imagens
