# routes/paciente.routes.js
@@ -10,6 +10,10 @@ const express = require('express')
 const router = express.Router()
 const bodyParser = require('body-parser')
 const bodyParserJSON = bodyParser.json()
+const multer = require('multer') // upload de arquivos
+
+// instancia para criar um objeto com as caracteristicas do multer
+const upload = multer()
 
 const {
     inserirNovaPaciente,
@@ -17,18 +21,33 @@ const {
     listarPaciente,
     buscarPaciente,
     excluirPaciente,
-    buscarPacienteByToken
+    buscarPacienteByToken,
+    editarPacienteByToken
 } = require('../controller/paciente/controller_paciente.js')
+
+const formatarJson = async (dados) => {
+    const paciente = {
+        nome_completo     : dados.nome_completo,
+        email             : dados.email,
+        celular           : dados.celular,
+        senha             : dados.senha
+    }
+
+    return paciente
+}
 
 // ---------------- paciente -----------------
 
 // endpoint para inserir paciente
-router.post('/',bodyParserJSON, async (req,res) => {
+router.post('/',upload.single('foto_avatar'), async (req,res) => {
     // recebe o conteudo dentro do body da requisição
     let dados = req.body
+    let foto_avatar = req.file
     let contentType = req.headers['content-type']
 
-    let result = await inserirNovaPaciente(dados,contentType)
+    const paciente = await formatarJson(dados)
+
+    let result = await inserirNovaPaciente(paciente,foto_avatar,contentType)
     res.status(result.status_code).json(result)
 })
 
@@ -53,12 +72,28 @@ router.get('/:id', async (req,res) => {
 })
 
 // endpoint para atualizar um paciente pelo id
-router.put('/:id', bodyParserJSON, async (req,res) => {
+router.put('/:id', upload.single('foto_avatar'), async (req,res) => {
     let id          = req.params.id                 // Recebe o id por parametro
     let dados       = req.body                      // Recebe os dados do body da requisição
     let contentType = req.headers['content-type']   // Recebe o ContentType do header da requisição
-    
-    let result      = await atualizarPaciente(dados, id, contentType)
+    let foto_avatar = req.file
+
+    const paciente = await formatarJson(dados)
+
+    let result      = await atualizarPaciente(paciente, id, foto_avatar, contentType)
+    res.status(result.status_code).json(result)
+})
+
+// endpoint para atualizar um paciente pelo token
+router.put('/me', upload.single('foto_avatar'), async (req,res) => {
+    let token = req.headers['x-access-token']
+    let dados = req.body
+    let contentType = req.headers['content-type']
+    let foto_avatar = req.file
+
+    const paciente = await formatarJson(dados)
+
+    let result = await editarPacienteByToken(paciente, token, foto_avatar, contentType)
     res.status(result.status_code).json(result)
 })
 
